--- a/app/src/main/res/layout/activity_cadastra_produto.xml
+++ b/app/src/main/res/layout/activity_cadastra_produto.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/Theme.Material3.DayNight"
     tools:context=".ui.activity.CadastraProdutoActivity">
 
     <com.google.android.material.textfield.TextInputLayout
