--- a/app/src/main/res/layout/item_pedido.xml
+++ b/app/src/main/res/layout/item_pedido.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/itemNumeroMesaPedido"
+                android:id="@+id/itemDescricaoNovoPedido"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="start"
@@ -36,10 +36,11 @@
                 tools:text="Número" />
 
             <ImageView
-                android:id="@+id/itemBtnExpandeConteudo"
+                android:id="@+id/itemBtnIncrementaQuantidadeNovoPedido"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
+                android:contentDescription="@string/stringImagemConteudoExpandido"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
