--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ToyaPedidos" parent="Theme.Material3.DayNight">
+    <style name="Theme.ToyaPedidos" parent="Theme.MaterialComponents.DayNight">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/azul_claro</item>
         <item name="colorPrimaryVariant">@color/azul_medio</item>
