--- a/app/src/main/res/layout/activity_cadastra_produto.xml
+++ b/app/src/main/res/layout/activity_cadastra_produto.xml
@@ -22,7 +22,6 @@
             android:inputType="text"
             android:textSize="24sp"
             android:padding="16dp"
-            android:textColor="@color/black"
             android:hint="@string/stringNome"/>
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
@@ -40,7 +39,6 @@
             android:inputType="textMultiLine"
             android:textSize="24sp"
             android:padding="16dp"
-            android:textColor="@color/black"
             android:hint="@string/descricao"/>
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
@@ -78,8 +76,7 @@
             android:inputType="numberDecimal"
             android:textSize="24sp"
             android:hint="@string/valor"
-            android:padding="16dp"
-            android:textColor="@android:color/black"/>
+            android:padding="16dp"/>
     </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
