--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/drawerLayoutMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -20,15 +20,12 @@
             android:fitsSystemWindows="true"
             android:theme="@style/Theme.ToyaPedidos.AppBarOverlay">
 
-            <androidx.appcompat.widget.Toolbar
+            <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
                 android:elevation="4dp"
-                app:navigationIcon="@drawable/ic_menu"
-                android:theme="@style/Widget.Material3.ActionBar.Solid"
-                app:popupTheme="@style/Theme.ToyaPedidos.PopupOverlay" />
+                app:navigationIcon="@drawable/ic_menu"/>
         </com.google.android.material.appbar.AppBarLayout>
 
         <FrameLayout
