--- a/app/src/main/res/layout/activity_cadastra_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastra_usuario.xml
@@ -80,6 +80,7 @@
         android:textSize="28sp"
         android:textAllCaps="false"
         android:text="@string/stringCadastrar"
+        style="@style/Widget.Material3.Button.OutlinedButton"
         app:layout_constraintStart_toStartOf="@id/txtSenhaCadastraUsuario"
         app:layout_constraintEnd_toEndOf="@+id/txtSenhaCadastraUsuario"
         app:layout_constraintTop_toBottomOf="@+id/txtSenhaCadastraUsuario"/>
