--- a/app/src/main/res/layout/activity_entra_usuario.xml
+++ b/app/src/main/res/layout/activity_entra_usuario.xml
@@ -73,6 +73,7 @@
         android:textSize="28sp"
         android:textAllCaps="false"
         android:text="@string/stringEntrar"
+        style="@style/Widget.Material3.Button.OutlinedButton"
         app:layout_constraintStart_toStartOf="@id/txtSenhaEntraUsuario"
         app:layout_constraintEnd_toEndOf="@+id/txtSenhaEntraUsuario"
         app:layout_constraintTop_toBottomOf="@+id/txtRecuperaSenhaUsuario"/>
