--- a/app/src/main/res/layout/activity_novo_pedido.xml
+++ b/app/src/main/res/layout/activity_novo_pedido.xml
@@ -100,9 +100,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <com.google.android.material.progressindicator.CircularProgressIndicator
+    <ProgressBar
         android:id="@+id/progressoCircularNovoPedido"
-        style="@style/Widget.Material3.CircularProgressIndicator"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
