--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,12 +2,12 @@
     <!-- Base application theme. -->
     <style name="Theme.ToyaPedidos" parent="Theme.Material3.DayNight">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/azul_claro</item>
-        <item name="colorPrimaryVariant">@color/azul_medio</item>
+        <item name="colorPrimary">@color/verde_claro</item>
+        <item name="colorPrimaryVariant">@color/verde</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/azul_medio</item>
-        <item name="colorSecondaryVariant">@color/azul_escuro</item>
+        <item name="colorSecondary">@color/azul_claro</item>
+        <item name="colorSecondaryVariant">@color/azul_claro</item>
         <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
