--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="azul_escuro">#0E73B4</color>
-    <color name="azul_medio">#57B3DF</color>
-    <color name="azul_claro">#84C7E2</color>
-    <color name="verde">#6CB57D</color>
+    <color name="azul">#0C72B5</color>
+    <color name="azul_escuro">#0C68A4</color>
+    <color name="azul_claro">#0F86D5</color>
+    <color name="verde">#8FC794</color>
+    <color name="verde_claro">#A2DAA7</color>
+    <color name="verde_escuro">#7BB580</color>
     <color name="bordo">#A71500</color>
+
 </resources>
