Atualização do projeto.

--- a/app/src/main/res/layout/activity_tela_inicial.xml
+++ b/app/src/main/res/layout/activity_tela_inicial.xml
@@ -11,8 +11,11 @@
         android:id="@+id/txtNomeAplicativo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
+        android:text="@string/stringNomeAplicativo"
         android:textSize="50sp"
+        android:layout_margin="8dp"
+        android:padding="8dp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,21 +29,19 @@
         android:layout_marginBottom="8dp"
         android:textSize="28sp"
         android:text="@string/stringEntrar"
-        android:textAllCaps="false"
-        app:layout_constraintBottom_toTopOf="@+id/btnCadastrar"
-        app:layout_constraintEnd_toEndOf="@id/btnCadastrar"
-        app:layout_constraintStart_toStartOf="@id/btnCadastrar" />
+        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarEmpresa"
+        app:layout_constraintEnd_toEndOf="@id/btnCadastrarEmpresa"
+        app:layout_constraintStart_toStartOf="@id/btnCadastrarEmpresa" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnCadastrar"
+        android:id="@+id/btnCadastrarEmpresa"
         style="@style/Widget.Material3.Button.OutlinedButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:layout_margin="32dp"
         android:textSize="28sp"
-        android:text="@string/stringCadastrar"
-        android:textAllCaps="false"
+        android:text="@string/stringCadastrarEmpresa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
