--- a/app/src/main/res/layout/activity_entra_usuario.xml
+++ b/app/src/main/res/layout/activity_entra_usuario.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.activity.EntraUsuarioActivity">
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/txtNomeAplicativo"
+        android:id="@+id/txtNomeEmpresa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
@@ -27,7 +27,7 @@
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtNomeAplicativo">
+        app:layout_constraintTop_toBottomOf="@id/txtNomeEmpresa">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtEmailEntraUsuario"
