--- a/app/src/main/res/layout/activity_tela_inicial.xml
+++ b/app/src/main/res/layout/activity_tela_inicial.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.activity.TelaInicialActivity">
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/txtNomeAplicativo"
+        android:id="@+id/txtNomeEmpresa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/stringNomeAplicativo"
